plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '5.1.+'
}

version = '1.0.0'
group = 'com.claudecraft'
archivesBaseName = 'claudecraft'

java.toolchain.languageVersion = JavaLanguageVersion.of(8)

minecraft {
    mappings channel: 'official', version: '1.16.5'

    runs {
        client {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                claudecraft {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                claudecraft {
                    source sourceSets.main
                }
            }
        }
    }
}

repositories {
    maven {
        url "https://maven.squiddev.cc"
        content {
            includeGroup("org.squiddev")
        }
    }
    mavenCentral()
}

dependencies {
    minecraft 'net.minecraftforge:forge:1.16.5-36.2.39'

    // CC: Tweaked API
    compileOnly "org.squiddev:cc-tweaked-1.16.5-api:1.101.2"
    runtimeOnly "org.squiddev:cc-tweaked-1.16.5:1.101.2"

    // Gson for JSON (bundled with Minecraft, declared for compile)
    compileOnly "com.google.code.gson:gson:2.8.6"
}

jar {
    manifest {
        attributes([
            "Specification-Title"     : "ClaudeCraft",
            "Specification-Vendor"    : "ClaudeCraft",
            "Specification-Version"   : "1",
            "Implementation-Title"    : project.name,
            "Implementation-Version"  : project.jar.archiveVersion,
            "Implementation-Vendor"   : "ClaudeCraft",
            "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

jar.finalizedBy('reobfJar')
